<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="timeline">Timeline</string>
    <string name="notifications">Notifications</string>
    <string name="app_name">Friendica</string>
    <string name="intf_fileupload2">Friendica</string>

    <string name="loading_data">Loading&#8230;</string>
    
    <string name="protocol">Protocol</string>
    <string-array name="supported_protocols"> <!-- this is NOT dynamic! -->
        <item>http</item><item>https</item>
    </string-array>
    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="logging_in">Logging in</string>
    
    <string name="app_title_html">Friendica</string>
    
    <string name="upload_file">Upload a photo</string>
    <string name="upload_now">Start upload</string>
    <string name="viewLatLon">Post Current Location</string>
    <string name="proxy_settings"><u>Proxy / SSL Settings...</u></string>
    <string name="post_status_update">Post Status Update</string>
    <string name="post">Post</string>
    
    
	<string name="mm_timeline">Timeline</string>
	<string name="mm_notifications">Notifications</string>
	<string name="mm_mywall">My Wall</string>
	<string name="mm_myphotoalbums">My Photo Albums</string>
	<string name="mm_friends">Friends</string>
	<string name="mm_directmessages">Messages</string>
	<string name="mm_updatemystatus">Update My Status</string>
	<string name="mm_takephoto">Take Photo And Upload</string>
	<string name="mm_selectphoto">Select Photo And Upload</string>
	<string name="mm_preferences">Preferences</string>
	<string name="mm_logout">Log Out</string>
	
	<string name="prefs_notifications">Notifications</string>
	<string name="prefs_enable_push_notifications">Enable Push Notifications</string>
	<string name="prefs_enable_pull_notifications">Enable Pull Notifications></string>
	<string name="prefs_check_interval">Check Interval</string>
	<string name="prefs_reregister_push_service">Re-register Push Service</string>
	<string name="prefs_update_check">Update Check</string>
	<string name="prefs_check_updates">Check For Updates</string>
	<string name="prefs_ssl">SSL</string>
	<string name="prefs_disable_cert_checks">Disable All Certificate Checks</string>
	<string name="prefs_network">Network</string>
	<string name="prefs_proxy_settings">Proxy Settings...</string>
	<string name="prefs_global_settings">Global Settings</string>
	<string name="prefs_system_proxy_settings">System Proxy Settings...</string>
	<string name="prefs_override_global_settings">Override Global Settings</string>
	<string name="prefs_host">Host</string>
	<string name="prefs_port">Port</string>
	<string name="prefs_proxy_auth">Proxy Authentication</string>
	<string name="prefs_google_cloud_msg">Google Cloud Messaging</string>
	<string name="prefs_drain_battery">May drain battery</string>
	<string name="prefs_testing_only">For Test Only (Unsafe!)</string>
	
		
    <string name="fake_data_notice">NOTE: As Friendica\&apos;s API doesn\&apos;t support photo albums at the moment, only example photos from my Panoramio profile are shown. <i>(tap to close)</i></string>
    
    <string-array name="notification_intervals">
        <item>every 15 minutes</item>	<item>every half hour</item>	<item>every hour</item>
        <item>every half day</item>		<item>every day</item>
    </string-array>
    
    <string-array name="notification_interval_values">
        <item>900000</item>				<item>1800000</item>			<item>3600000</item>
        <item>43200000</item>			<item>86400000</item>
    </string-array>
    
</resources>
