<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="vertical" android:background="#fff" android:paddingLeft="10dp" android:paddingRight="10dp">
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="wrap_content" android:orientation="vertical" android:background="#fff" android:paddingLeft="10dp" android:paddingRight="10dp">
    
    
    
    <TextView android:text="..." android:id="@+id/lblInfo" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="10px" android:paddingBottom="10px"></TextView>
    
    <TableLayout android:id="@+id/tableLayout1" android:stretchColumns="1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/protocol"></TextView>
            <Spinner android:text="" android:entries="@array/supported_protocols" android:id="@+id/selProtocol" android:imeOptions="actionNext" android:inputType="textUri" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/server"></TextView>
            <EditText android:text="" android:hint="example.com" android:id="@+id/edtServer" android:singleLine="true" android:imeOptions="actionNext" android:inputType="textUri" android:layout_width="match_parent" android:layout_height="wrap_content"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow2" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_width="wrap_content" android:text="@string/username"></TextView>
            <EditText android:text="" android:id="@+id/edtUser" android:singleLine="true" android:imeOptions="actionNext" android:inputType="textEmailAddress" android:layout_width="match_parent" android:layout_height="wrap_content"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow3" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_width="wrap_content" android:text="@string/password"></TextView>
            <EditText android:text="" android:password="true" android:singleLine="true" android:imeOptions="actionGo" android:inputType="textPassword" android:id="@+id/edtPassword" android:layout_width="match_parent" android:layout_height="wrap_content"></EditText>
        </TableRow>
        <TableRow android:id="@+id/tableRow4" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""></TextView>
            <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="match_parent">
				        <Button android:text="@string/login" android:layout_height="wrap_content" android:id="@+id/button1" android:layout_width="match_parent" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"></Button><!-- android:layout_toLeftOf="@+id/button2"  -->
				        <!-- <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:id="@+id/button2" android:text="@string/register"></Button-->
				    </RelativeLayout>
        </TableRow>
        <TableRow android:id="@+id/tableRow5" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""></TextView>
            <TextView android:layout_width="wrap_content" android:id="@+id/proxy_settings" android:paddingBottom="10dp" android:textColor="#0000ff" android:layout_height="wrap_content" android:text="@string/proxy_settings"></TextView>
            
        </TableRow>
    </TableLayout>
    
    
</LinearLayout>
</ScrollView>